deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: akashneel-appweb
  name: akashneel-appweb
  namespace: akashneel-final-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: akashneel-appweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: akashneel-appweb
    spec:
      containers:
      - image: akashneel/akashneelsec:version11
        name: akashneelweb
        ports:
        - containerPort: 80
        resources: {}
status: {}
