service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: akashneellb
  name: akashneellb
  namespace: akashneel-final-app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector: # pod finder so we have to use label of pod there
   app: akashneel-appweb
  type: ClusterIP
status:
  loadBalancer: {}
